# fast-api-project

./: .env.example  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
src/: main.py
src/controllers/: error_controller.py
src/core/: config.py  errors.py
src/core/security/: dependencies.py  jwt.py  password.py
src/exceptions/: error_handler.py
src/models/: auth.py  base_model.py  user.py
src/routers/: auth_router.py  user_router.py
src/services/: auth_service.py
src/utils/: app_error.py  date_now.py  db.py  logging.py
